Añadido creacion y edicion de eventos

--- a/public/login/index.html
+++ b/public/login/index.html
@@ -39,7 +39,7 @@
 	            </div>
 	          </form>
 	          <p class="w-100 text-center">&mdash; <a href="#" style="color: #fff">Olvidé mi contraseña</a> &mdash;</p>
-	          <form action="../register.html" class="signin-form">
+	          <form action="register.html" class="signin-form">
 				<div class="form-group">
 	            	<button type="submit" class="form-control btn btn-primary submit px-3">Regístrate</a></button>
 	            </div>
@@ -52,9 +52,9 @@
 	</section>
 
 	<script src="js/jquery.min.js"></script>
-  <script src="js/popper.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
+  	<script src="js/popper.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  	<script src="js/main.js"></script>
 
 	</body>
 </html>
