--- a/public/login/index.html
+++ b/public/login/index.html
@@ -24,12 +24,12 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
 		      	<h3 class="mb-4 text-center">&mdash; Iniciar sesión &mdash;</h3>
-		      	<form action="#" class="signin-form">
+		      	<form action="#" class="signin-form" id="loginForm">
 		      		<div class="form-group">
-		      			<input type="text" class="form-control" placeholder="Usuario" required>
+		      			<input type="text" id="correo" name="correo" class="form-control" placeholder="Usuario" required>
 		      		</div>
 	            <div class="form-group">
-	              <input id="password-field" type="password" class="form-control" placeholder="Contrseña" required>
+	              <input id="password-field" name="password" type="password" class="form-control" placeholder="Contrseña" required>
 	              <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
 	            </div>
 	            <div class="form-group">
@@ -55,6 +55,7 @@
   	<script src="js/popper.js"></script>
   	<script src="js/bootstrap.min.js"></script>
   	<script src="js/main.js"></script>
+  	<script src="js/login.js"></script>
 
 	</body>
 </html>
