--- a/public/site/index.html
+++ b/public/site/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<title>Sidebar 01</title>
+  	<title>Inicio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" type="image/vnd.icon" href="images/logo.png">  
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,26 +19,24 @@
 		  		<a href="#" class="img logo rounded-circle mb-5" style="background-image: url(images/logo.jpg);"></a>
 	        <ul class="list-unstyled components mb-5">
 	          <li class="active">
-	            <a href="#">Home</a>
+	            <a href="">Home</a>
 	          </li>
 	          <li>
 	              <a href="newEvent.html">Nuevo Evento</a>
 	          </li>
-	          <li>
-              <a href="#">Perfil</a>
+            <li>
+              <a href="addFriends.html">Añadir amigos</a>
 	          </li>
 	          <li>
-              <a href="../login/index.html">Logout</a>
+              <a href="profile.html">Perfil</a>
 	          </li>
 	          <li>
-              <a href="#">Configuración</a>
+              <a href="#" id="logoutLink">Logout</a>
 	          </li>
+	          
 	        </ul>
 
 	        <div class="footer">
-	        	<!-- <p>Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-						  Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 	        </div>
 
 	      </div>
@@ -49,34 +47,36 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-
-            <button type="button" id="sidebarCollapse" class="btn btn-primary">
-              <i class="fa fa-bars"></i>
-              <span class="sr-only">Toggle Menu</span>
-            </button>
-            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fa fa-bars"></i>
-            </button>
-
-            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="nav navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-              </ul>
-            </div> -->
           </div>
         </nav>
+        <!-- Calendario -->
         <div id="calendar"></div>
+        <!-- Modal -->
+        <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="eventModalLabel">Detalles del Evento</h5>
+              </div>
+              <div class="modal-body">
+                <p><strong>Título:</strong> <span id="modalEventTitle"></span></p>
+                <p><strong>Descripción:</strong> <span id="modalEventDescription"></span></p>
+                <p><strong>Fecha inicio:</strong> <span id="modalEventStart"></span></p>
+                <p><strong>Fecha fin:</strong> <span id="modalEventEnd"></span></p>
+                <!-- <p><strong>Participantes:</strong> <span id="modalEventParticipants"></span></p> -->
+                 <div id="modalParticipants" class="mt-3">
+                  <h6>Participantes:</h6>
+                  <ul id="participantList" class="list-unstyled mb-0"></ul>
+                </div>
+              </div>
+              <div class="modal-footer">
+                <a id="modalEditLink" href="#" class="btn btn-primary">Editar Evento</a>
+                <a id="modalSignLink" href="#" class="btn btn-primary">Reservar Evento</a>
+                <button type="button" id="modalCloseBtn" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar">Cerrar</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 		</div>
     
@@ -84,6 +84,8 @@
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/logout.js"></script>
     <script src="js/calendar.js" type="module"></script>
+    <script src="js/imagen.js"></script>
   </body>
 </html>
