--- a/public/site/newEvent.html
+++ b/public/site/newEvent.html
@@ -70,12 +70,12 @@
 
                 <div class="form-group mb-3">
                   <label for="fechaInicio" class="form-label">Fecha inicio</label>
-                  <input type="date" id="fechaInicio" class="form-control" required>
+                  <input type="datetime-local" id="fechaInicio" class="form-control" required>
                 </div>
 
                 <div class="form-group mb-3">
                   <label for="fechaFinal" class="form-label">Fecha final</label>
-                  <input type="date" id="fechaFinal" class="form-control" required>
+                  <input type="datetime-local" id="fechaFinal" class="form-control" required>
                 </div>
 
                 <div class="form-group mb-3">
@@ -103,5 +103,6 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/newEvent.js" type="module"></script>
+    <script src="js/imagen.js"></script>
   </body>
 </html>
