--- a/public/site/profile.html
+++ b/public/site/profile.html
@@ -25,7 +25,7 @@
 	              <a href="newEvent.html">Nuevo Evento</a>
 	          </li>
 	          <li>
-              <a href="#">Perfil</a>
+              <a href="profile.html">Perfil</a>
 	          </li>
 	          <li>
               <a href="../login/index.html">Logout</a>
@@ -49,47 +49,36 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-
-            <button type="button" id="sidebarCollapse" class="btn btn-primary">
-              <i class="fa fa-bars"></i>
-              <span class="sr-only">Toggle Menu</span>
-            </button>
-            <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fa fa-bars"></i>
-            </button>
           </div>
         </nav>
         <div class="container mt-5">
           <div class="row justify-content-center">
             <div class="col-md-6 text-center mb-5">
-              <form action="#" class="signin-form">
+              <form action="actualizar_usuario.php" method="POST" enctype="multipart/form-data" class="profile-form" id="profile-form">
                 <div class="form-group mb-3">
-                  <label for="nombre" class="form-label">Nombre</label>
-                  <input type="text" id="nombre" class="form-control" placeholder="Nombre del evento" required>
+                  <label class="form-label">Foto de perfil</label>
+                  <div>
+                    <img id="imagen" src="" alt="Foto de perfil" class="img-thumbnail" style="max-width: 150px; height: auto;">
+                  </div>
                 </div>
-
                 <div class="form-group mb-3">
-                  <label for="fechaInicio" class="form-label">Fecha inicio</label>
-                  <input type="datetime-local" id="fechaInicio" class="form-control" required>
+                  <label class="form-label">Nombre</label>
+                  <p id="nombre" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
                 </div>
-
                 <div class="form-group mb-3">
-                  <label for="fechaFinal" class="form-label">Fecha final</label>
-                  <input type="datetime-local" id="fechaFinal" class="form-control" required>
+                  <label class="form-label">Apellido</label>
+                  <p id="apellido" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
                 </div>
-
                 <div class="form-group mb-3">
-                  <label for="ubicacion" class="form-label">Ubicación</label>
-                  <input type="text" id="ubicacion" class="form-control" placeholder="Dirección o enlace" required>
+                  <label class="form-label">Correo electrónico</label>
+                  <p id="correo" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
                 </div>
-
                 <div class="form-group mb-3">
-                  <label for="descripcion" class="form-label">Descripción</label>
-                  <textarea id="descripcion" class="form-control" rows="3" placeholder="Descripción del evento" required></textarea>
+                  <label for="foto" class="form-label">Foto de perfil</label>
+                  <input type="file" id="foto" name="foto" class="form-control" accept="image/*">
                 </div>
-
                 <div class="form-group mb-3">
-                  <button type="submit" class="form-control btn btn-primary submit px-3">Crear Evento</button>
+                  <button type="submit" class="form-control btn btn-success">Actualizar Foto</button>
                 </div>
               </form>
             </div>
@@ -97,12 +86,11 @@
         </div>
       </div>
 		</div>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/editEvent.js" type="module"></script>
+    <script src="js/profile.js" ></script>
     <script src="js/imagen.js"></script>
   </body>
 </html>
