--- a/public/site/profile.html
+++ b/public/site/profile.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Sidebar 01</title>
+  	<title>Mi perfil</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" type="image/vnd.icon" href="images/logo.png">  
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 		
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,26 +19,24 @@
 		  		<a href="#" class="img logo rounded-circle mb-5" style="background-image: url(images/logo.jpg);"></a>
 	        <ul class="list-unstyled components mb-5">
 	          <li class="active">
-	            <a href="index.html">Home</a>
+	            <a href="../">Home</a>
 	          </li>
 	          <li>
 	              <a href="newEvent.html">Nuevo Evento</a>
+	          </li>
+            <li>
+              <a href="addFriends.html">Añadir amigos</a>
 	          </li>
 	          <li>
               <a href="profile.html">Perfil</a>
 	          </li>
 	          <li>
-              <a href="../login/index.html">Logout</a>
+              <a href="#" id="logoutLink">Logout</a>
 	          </li>
-	          <li>
-              <a href="#">Configuración</a>
-	          </li>
+	          
 	        </ul>
 
 	        <div class="footer">
-	        	<!-- <p>Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-						  Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 	        </div>
 
 	      </div>
@@ -92,5 +90,6 @@
     <script src="js/main.js"></script>
     <script src="js/profile.js" ></script>
     <script src="js/imagen.js"></script>
+    <script src="js/logout.js"></script>
   </body>
 </html>
