--- a/public/login/index.html
+++ b/public/login/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>Login 10</title>
+  	<title>Log in</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="icon" type="image/vnd.icon" href="images/logo.png">  
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +17,10 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Koyomi</h2>
+					<div class="d-flex align-items-center justify-content-center">
+					<img src="images/logo.png" alt="Logo" style="height: 60px; margin-right: 10px; margin-bottom: 10px;">
+					<h2 class="heading-section m-0">Koyomi</h2>
+					</div>
 				</div>
 			</div>
 			<div class="row justify-content-center">
