--- a/public/site/addFriends.html
+++ b/public/site/addFriends.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<title>Sidebar 01</title>
+  	<title>Buscar amigos</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/vnd.icon" href="images/logo.png">  
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 		
@@ -28,7 +29,7 @@
               <a href="addFriends.html">Añadir amigos</a>
 	          </li>
 	          <li>
-              <a href="#">Perfil</a>
+              <a href="profile.html">Perfil</a>
 	          </li>
 	          <li>
               <a href="#" id="logoutLink">Logout</a>
@@ -37,14 +38,10 @@
 	        </ul>
 
 	        <div class="footer">
-	        	<!-- <p>Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
-						  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib.com</a>
-						  Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.</p> -->
 	        </div>
 
 	      </div>
     	</nav>
-
         <!-- Page Content  -->
       <div id="content" class="p-4 p-md-5">
 
@@ -98,6 +95,7 @@
     <script src="js/main.js"></script>
     <script src="js/logout.js"></script>
     <script src="js/addFriends.js"></script>
+    <script src="js/imagen.js"></script>
     <script src="js/imagen.js"></script>
   </body>
 </html>
