--- a/public/site/index.html
+++ b/public/site/index.html
@@ -87,5 +87,7 @@
     <script src="js/logout.js"></script>
     <script src="js/calendar.js" type="module"></script>
     <script src="js/imagen.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
   </body>
 </html>
