--- a/public/login/index.html
+++ b/public/login/index.html
@@ -1,65 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
-  	<title>Log in</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/vnd.icon" href="images/logo.png">  
+
+<head>
+	<title>Log in</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="icon" type="image/vnd.icon" href="images/logo.png">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
+
 	<link rel="stylesheet" href="css/style.css">
 
-	</head>
-	<body class="js-fullheight" style="background-color: #FF9E00;">
+</head>
+
+<body class="js-fullheight" style="background-color: #FF9E00;">
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
 					<div class="d-flex align-items-center justify-content-center">
-					<img src="images/logo.png" alt="Logo" style="height: 60px; margin-right: 10px; margin-bottom: 10px;">
-					<h2 class="heading-section m-0">Koyomi</h2>
+						<img src="images/logo.png" alt="Logo"
+							style="height: 60px; margin-right: 10px; margin-bottom: 10px;">
+						<h2 class="heading-section m-0">Koyomi</h2>
 					</div>
 				</div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
-		      	<h3 class="mb-4 text-center">&mdash; Iniciar sesión &mdash;</h3>
-		      	<form action="#" class="signin-form" id="loginForm">
-		      		<div class="form-group">
-		      			<input type="text" id="correo" name="correo" class="form-control" placeholder="Usuario" required>
-		      		</div>
-	            <div class="form-group">
-	              <input id="password-field" name="password" type="password" class="form-control" placeholder="Contrseña" required>
-	              <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
-	            </div>
-	            <div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary submit px-3">Entrar</button>
-	            </div>
-	            <div class="form-group d-md-flex">
-	            </div>
-	          </form>
-	          <p class="w-100 text-center">&mdash; <a href="#" style="color: #fff">Olvidé mi contraseña</a> &mdash;</p>
-	          <form action="register.html" class="signin-form">
-				<div class="form-group">
-	            	<button type="submit" class="form-control btn btn-primary submit px-3">Regístrate</a></button>
-	            </div>
-	          	
-	          </form>
-		      </div>
+						<h3 class="mb-4 text-center">&mdash; Iniciar sesión &mdash;</h3>
+						<form action="#" class="signin-form" id="loginForm">
+							<div class="form-group">
+								<input type="text" id="correo" name="correo" class="form-control" placeholder="Correo"
+									required>
+							</div>
+							<div class="form-group">
+								<input id="password-field" name="password" type="password" class="form-control"
+									placeholder="Contrseña" required>
+								<span toggle="#password-field"
+									class="fa fa-fw fa-eye field-icon toggle-password"></span>
+							</div>
+							<div class="form-group">
+								<button type="submit" class="form-control btn btn-primary submit px-3">Entrar</button>
+							</div>
+							<div class="form-group d-md-flex">
+							</div>
+						</form>
+						<p class="w-100 text-center">&mdash; <a href="#" style="color: #fff">Olvidé mi contraseña</a>
+							&mdash;</p>
+						<form action="register.html" class="signin-form">
+							<div class="form-group">
+								<button type="submit"
+									class="form-control btn btn-primary submit px-3">Regístrate</a></button>
+							</div>
+
+						</form>
+					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<script src="js/jquery.min.js"></script>
-  	<script src="js/popper.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
-  	<script src="js/main.js"></script>
-  	<script src="js/login.js"></script>
+	<script src="js/popper.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
+	<script src="js/login.js"></script>
 
-	</body>
+</body>
+
 </html>
-
