--- a/public/site/index.html
+++ b/public/site/index.html
@@ -1,93 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-  	<title>Inicio</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/vnd.icon" href="images/logo.png">  
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-		
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/style.css">
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
-  </head>
-  <body>
-		
-		<div class="wrapper d-flex align-items-stretch">
-			<nav id="sidebar">
-				<div class="p-4 pt-5">
-		  		<a href="#" class="img logo rounded-circle mb-5" style="background-image: url(images/logo.jpg);"></a>
-	        <ul class="list-unstyled components mb-5">
-	          <li class="active">
-	            <a href="">Home</a>
-	          </li>
-	          <li>
-	              <a href="newEvent.html">Nuevo Evento</a>
-	          </li>
-            <li>
-              <a href="addFriends.html">Añadir amigos</a>
-	          </li>
-	          <li>
-              <a href="profile.html">Perfil</a>
-	          </li>
-	          <li>
-              <a href="#" id="logoutLink">Logout</a>
-	          </li>
-	          
-	        </ul>
 
-	        <div class="footer">
-	        </div>
+<head>
+  <title>Inicio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/vnd.icon" href="images/logo.png">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
-	      </div>
-    	</nav>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
+</head>
 
-        <!-- Page Content  -->
-      <div id="content" class="p-4 p-md-5">
+<body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-          </div>
-        </nav>
-        <!-- Calendario -->
-        <div id="calendar"></div>
-        <!-- Modal -->
-        <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="eventModalLabel">Detalles del Evento</h5>
+  <div class="wrapper d-flex align-items-stretch">
+    <nav id="sidebar">
+      <div class="p-4 pt-5">
+        <a href="#" class="img logo rounded-circle mb-5" style="background-image: url(images/logo.jpg);"></a>
+        <ul class="list-unstyled components mb-5">
+          <li class="active">
+            <a href="">Home</a>
+          </li>
+          <li>
+            <a href="newEvent.html">Nuevo Evento</a>
+          </li>
+          <li>
+            <a href="addFriends.html">Añadir amigos</a>
+          </li>
+          <li>
+            <a href="profile.html">Perfil</a>
+          </li>
+          <li>
+            <a href="#" id="logoutLink">Logout</a>
+          </li>
+
+        </ul>
+
+        <div class="footer">
+        </div>
+
+      </div>
+    </nav>
+
+    <!-- Page Content  -->
+    <div id="content" class="p-4 p-md-5">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button type="button" id="sidebarCollapse" class="btn btn-primary">
+            <i class="fa fa-bars"></i>
+            <span class="sr-only">Toggle Menu</span>
+          </button>
+        </div>
+      </nav>
+      <!-- Calendario -->
+      <div id="calendar"></div>
+      <!-- Modal -->
+      <div class="modal fade" id="eventModal" tabindex="-1" aria-labelledby="eventModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="eventModalLabel">Detalles del Evento</h5>
+            </div>
+            <div class="modal-body">
+              <p><strong>Título:</strong> <span id="modalEventTitle"></span></p>
+              <p><strong>Descripción:</strong> <span id="modalEventDescription"></span></p>
+              <p><strong>Fecha inicio:</strong> <span id="modalEventStart"></span></p>
+              <p><strong>Fecha fin:</strong> <span id="modalEventEnd"></span></p>
+              <!-- <p><strong>Participantes:</strong> <span id="modalEventParticipants"></span></p> -->
+              <div id="modalParticipants" class="mt-3">
+                <h6>Participantes:</h6>
+                <ul id="participantList" class="list-unstyled mb-0"></ul>
               </div>
-              <div class="modal-body">
-                <p><strong>Título:</strong> <span id="modalEventTitle"></span></p>
-                <p><strong>Descripción:</strong> <span id="modalEventDescription"></span></p>
-                <p><strong>Fecha inicio:</strong> <span id="modalEventStart"></span></p>
-                <p><strong>Fecha fin:</strong> <span id="modalEventEnd"></span></p>
-                <!-- <p><strong>Participantes:</strong> <span id="modalEventParticipants"></span></p> -->
-                 <div id="modalParticipants" class="mt-3">
-                  <h6>Participantes:</h6>
-                  <ul id="participantList" class="list-unstyled mb-0"></ul>
-                </div>
-              </div>
-              <div class="modal-footer">
-                <a id="modalEditLink" href="#" class="btn btn-primary">Editar Evento</a>
-                <a id="modalSignLink" href="#" class="btn btn-primary">Reservar Evento</a>
-                <button type="button" id="modalCloseBtn" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar">Cerrar</button>
-              </div>
+            </div>
+            <div class="modal-footer">
+              <a id="modalEditLink" href="#" class="btn btn-primary">Editar Evento</a>
+              <a id="modalSignLink" href="#" class="btn btn-primary">Reservar Evento</a>
+              <button type="button" id="modalCloseBtn" class="btn-close" data-bs-dismiss="modal"
+                aria-label="Cerrar">Cerrar</button>
             </div>
           </div>
         </div>
       </div>
-		</div>
-    
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/logout.js"></script>
-    <script src="js/calendar.js" type="module"></script>
-    <script src="js/imagen.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    </div>
+  </div>
 
-  </body>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/logout.js"></script>
+  <script src="js/calendar.js" type="module"></script>
+  <script src="js/imagen.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
 </html>
