--- a/public/site/profile.html
+++ b/public/site/profile.html
@@ -1,95 +1,104 @@
 <!doctype html>
 <html lang="en">
-  <head>
-  	<title>Mi perfil</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/vnd.icon" href="images/logo.png">  
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-		
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		<link rel="stylesheet" href="css/style.css">
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
-  </head>
-  <body>
-		
-		<div class="wrapper d-flex align-items-stretch">
-			<nav id="sidebar">
-				<div class="p-4 pt-5">
-		  		<a href="#" class="img logo rounded-circle mb-5" style="background-image: url(images/logo.jpg);"></a>
-	        <ul class="list-unstyled components mb-5">
-	          <li class="active">
-	            <a href="../">Home</a>
-	          </li>
-	          <li>
-	              <a href="newEvent.html">Nuevo Evento</a>
-	          </li>
-            <li>
-              <a href="addFriends.html">Añadir amigos</a>
-	          </li>
-	          <li>
-              <a href="profile.html">Perfil</a>
-	          </li>
-	          <li>
-              <a href="#" id="logoutLink">Logout</a>
-	          </li>
-	          
-	        </ul>
 
-	        <div class="footer">
-	        </div>
+<head>
+  <title>Mi perfil</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/vnd.icon" href="images/logo.png">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 
-	      </div>
-    	</nav>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
+</head>
 
-        <!-- Page Content  -->
-      <div id="content" class="p-4 p-md-5">
+<body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container-fluid">
-          </div>
-        </nav>
-        <div class="container mt-5">
-          <div class="row justify-content-center">
-            <div class="col-md-6 text-center mb-5">
-              <form action="actualizar_usuario.php" method="POST" enctype="multipart/form-data" class="profile-form" id="profile-form">
-                <div class="form-group mb-3">
-                  <label class="form-label">Foto de perfil</label>
-                  <div>
-                    <img id="imagen" src="" alt="Foto de perfil" class="img-thumbnail" style="max-width: 150px; height: auto;">
-                  </div>
+  <div class="wrapper d-flex align-items-stretch">
+    <nav id="sidebar">
+      <div class="p-4 pt-5">
+        <a href="#" class="img logo rounded-circle mb-5" style="background-image: url(images/logo.jpg);"></a>
+        <ul class="list-unstyled components mb-5">
+          <li class="active">
+            <a href="../">Home</a>
+          </li>
+          <li>
+            <a href="newEvent.html">Nuevo Evento</a>
+          </li>
+          <li>
+            <a href="addFriends.html">Añadir amigos</a>
+          </li>
+          <li>
+            <a href="profile.html">Perfil</a>
+          </li>
+          <li>
+            <a href="#" id="logoutLink">Logout</a>
+          </li>
+
+        </ul>
+
+        <div class="footer">
+        </div>
+
+      </div>
+    </nav>
+
+    <!-- Page Content  -->
+    <div id="content" class="p-4 p-md-5">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button type="button" id="sidebarCollapse" class="btn btn-primary">
+            <i class="fa fa-bars"></i>
+            <span class="sr-only">Toggle Menu</span>
+          </button>
+        </div>
+      </nav>
+      <div class="container mt-5">
+        <div class="row justify-content-center">
+          <div class="col-md-6 text-center mb-5">
+            <form action="actualizar_usuario.php" method="POST" enctype="multipart/form-data" class="profile-form"
+              id="profile-form">
+              <div class="form-group mb-3">
+                <label class="form-label">Foto de perfil</label>
+                <div>
+                  <img id="imagen" src="" alt="Foto de perfil" class="img-thumbnail"
+                    style="max-width: 150px; height: auto;">
                 </div>
-                <div class="form-group mb-3">
-                  <label class="form-label">Nombre</label>
-                  <p id="nombre" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
-                </div>
-                <div class="form-group mb-3">
-                  <label class="form-label">Apellido</label>
-                  <p id="apellido" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
-                </div>
-                <div class="form-group mb-3">
-                  <label class="form-label">Correo electrónico</label>
-                  <p id="correo" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
-                </div>
-                <div class="form-group mb-3">
-                  <label for="foto" class="form-label">Foto de perfil</label>
-                  <input type="file" id="foto" name="foto" class="form-control" accept="image/*">
-                </div>
-                <div class="form-group mb-3">
-                  <button type="submit" class="form-control btn btn-success">Actualizar Foto</button>
-                </div>
-              </form>
-            </div>
+              </div>
+              <div class="form-group mb-3">
+                <label class="form-label">Nombre</label>
+                <p id="nombre" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
+              </div>
+              <div class="form-group mb-3">
+                <label class="form-label">Apellido</label>
+                <p id="apellido" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
+              </div>
+              <div class="form-group mb-3">
+                <label class="form-label">Correo electrónico</label>
+                <p id="correo" class="form-control-plaintext"></p> <!-- reemplaza con datos dinámicos -->
+              </div>
+              <div class="form-group mb-3">
+                <label for="foto" class="form-label">Foto de perfil</label>
+                <input type="file" id="foto" name="foto" class="form-control" accept="image/*">
+              </div>
+              <div class="form-group mb-3">
+                <button type="submit" class="form-control btn btn-success">Actualizar Foto</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
-		</div>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/profile.js" ></script>
-    <script src="js/imagen.js"></script>
-    <script src="js/logout.js"></script>
-  </body>
+    </div>
+  </div>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/profile.js"></script>
+  <script src="js/imagen.js"></script>
+  <script src="js/logout.js"></script>
+</body>
+
 </html>
